--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/TestBed.TestBed
-EditorStartupMap=/Game/Levels/TestBed.TestBed
-GlobalDefaultGameMode="/Script/HP1.HP1GameMode"
+EditorStartupMap=/Game/Levels/Development_Level.Development_Level
+GlobalDefaultGameMode=/Game/BluePrints/MyGameMode_BP.MyGameMode_BP_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
@@ -29,6 +29,7 @@ TriangleMeshTriangleMinAreaThreshold=5.000000
 bEnableAsyncScene=False
 bEnableShapeSharing=False
 bEnablePCM=False
+bEnableStabilization=False
 bWarnMissingLocks=True
 bEnable2DPhysics=False
 LockedAxis=Invalid
@@ -48,6 +49,7 @@ bSuppressFaceRemapTable=False
 bSupportUVFromHitResults=False
 bDisableActiveActors=False
 bDisableCCD=False
+bEnableEnhancedDeterminism=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -56,5 +58,5 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
+PhysXTreeRebuildRate=10
 
