--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -2,6 +2,8 @@
 Paths=../../../Engine/Content
 Paths=%GAMEDIR%Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
+Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
+Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -17,5 +19,13 @@ SDKPath=(Path="")
 NDKPath=(Path="")
 ANTPath=(Path="")
 JavaPath=(Path="")
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
